--- a/shell/index_1.html
+++ b/shell/index_1.html
@@ -1187,7 +1187,7 @@ src="https://www.facebook.com/tr?id=455643859592780&ev=PageView&noscript=1"
                 }, // field that will be passed to API
                 headers: {
                     "Content-Type": "application/json",
-                    point: "uni",
+                    point: "itrade",
                 }, // Headers
                 triggers: {
                     error: true,
