--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         $('#btnSelect').on('click', function (){
       let val = Number(inpt.val());
             if (val >= minValue && val <= maxValue) {
-                window.location.href = './shell/index_nano.html?'+utm;
+                window.location.href = './shell/index_valid.html?'+utm;
             } else {
                 alert('Код проверки введен не правильно');
         console.log(inpt.val());
