--- a/shell/index_valid.html
+++ b/shell/index_valid.html
@@ -2460,7 +2460,7 @@
                             <input name="time" class="registration__time" type="hidden" value="0">
                             <input name="partnersCode" type="hidden" value="180">
                             <input name="campaign_id" type="hidden" value="shell_isr">
-                            <input name="affiliate_id" type="hidden" value="Vitaliy.A.">
+                            <input name="affiliate_id" type="hidden" value="Viktor.A.">
                             <!---->
                             <!---->
                             <!---->
