--- a/shell/index_valid.html
+++ b/shell/index_valid.html
@@ -2476,7 +2476,7 @@
                     <article class="p-8 sm:py-20 sm:px-4 flex flex-col bg-primary text-white punkti__logo">
                         <h3 class="text-4xl sm:text-3xl font-ubuntu font-bold mb-8 sm:mb-16 shell__h3">
                             Почему это <span>выгодно</span> <br />
-                            для обычных граждан ЕС
+                            для обычных граждан
                         </h3>
                         <div class="flex items-center mb-5">
                             <div class="w-1/5">
@@ -2543,7 +2543,7 @@
                             Генеральный директор Royal Dutch Shell plc.
                         </h5>
                         <p class="mb-8 sm:leading-relaxed shell__solution-text">
-                            Мы приняли решение открыть доступ к торгам нефтью и газом для всех граждан ЕС, поскольку это
+                            Мы приняли решение открыть доступ к торгам нефтью и газом для всех граждан, поскольку это
                             будет выгодно как для SHELL, так и для обычных людей.
                         </p>
                         <p class="shell__solution-text">
